Codebase quality sweep: 8 improvement items (#10, #12, #16, #19-23)
- #10 Dialog boilerplate: extract DialogHelper.runModalLoop(), use
  DialogPositioning in DuplicateCleanupDialog
- #12 File I/O off UI thread: pre-compute file metadata in
  DuplicateCleanupDialog via FileInfo record
- #16 Decompose evaluate(): split 310-line method into 8 named steps
  with null-return chain in ShowSelectionEvaluator
- #19 Standardise logging: convert logger.fine(msg+x) to lambda form,
  fix exception anti-pattern in TheTVDBProvider
- #20 FileUtilities null handling: add null guards to isDirEmpty/rmdir
- #21 XML escaping utility: move escapeXml to StringUtils, delegate
  from MkvMetadataTagger
- #22 Constants organisation: add section divider comments
- #23 Metadata tagger tests: add ProcessRunnerTest,
  ExternalToolDetectorTest, and StringUtils test coverage

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>